--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -12,14 +12,16 @@
 	<a th:href="@{/listUser}">一覧に戻る</a>
 </div>
 <h1>create</h1>
-<form th:action="@{/saveUser}" th:object="${user}" method="post">
+<form th:action="@{/createUser}" th:object="${localUserForm}" method="post">
 	<div>
 		<label for="name">name</label>
 		<input type="text" th:field="*{name}" id="name" />
+		<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
 	</div>
 	<div>
 		<label for="email">email</label>
 		<input type="text" th:field="*{email}" id="email" />
+		<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
 	</div>
 	<div>
 		<button type="submit">登録</button>
