--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,22 @@
 	<li><a th:href="@{/logout}">ログアウト</a></li>
 	<li><a th:href="@{/listUser}">ユーザ一覧</a></li>
 </ul>
+<h2>3. Validation</h2>
+<div>
+	<a href="https://github.com/no29571/user/tree/ex-validation">GitHub：ex-validation</a>
+</div>
+<ol>
+	<li>drop table local_user cascade;</li>
+	<li>Entityクラスに定義・制約を追加</li>
+	<li>Repositoryクラスにメソッド定義追加</li>
+	<li>AnnotationクラスとValidatorクラスを作成</li>
+	<li>フィールド単位の検証のサンプル：ByteLength</li>
+	<li>クラス単位の検証のサンプル：UniqueEmail</li>
+	<li>message.propertiesを作成（Limyプロパティエディタで開く）</li>
+	<li>DTOクラス（LocalUserForm）を作成</li>
+	<li>Serviceクラスの引数をDTOに変更</li>
+	<li>テンプレートとControllerクラスの対応</li>
+</ol>
 <h2>2. CRUD</h2>
 <div>
 	<a href="https://github.com/no29571/user/tree/ex-crud">GitHub：ex-crud</a>
