Loginのカスタマイズ

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,6 +4,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<link th:href="@{/css/site.css}" rel="stylesheet" />
 <title>error | sample</title>
 </head>
 <body>
