--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja"
 	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
@@ -25,13 +26,21 @@
 		<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
 	</div>
 	<div>
+		<label for="role">role</label>
+		<select th:field="*{role}" id="role">
+			<option th:each="item : *{roleList}" th:value="${item.name}" th:text="${item.displayName}"></option>
+		</select>
+		<span th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></span>
+	</div>
+	<div>
 		<input type="hidden" th:field="*{password}" />
 		<input type="hidden" th:field="*{id}" />
 		<button type="submit">登録</button>
 	</div>
 </form>
 <!--削除フォーム-->
-<form th:action="@{/deleteUser}" th:object="${localUserForm}" method="post">
+<form sec:authorize="${hasRole('ROLE_ADMIN')}"
+	th:action="@{/deleteUser}" th:object="${localUserForm}" method="post">
 	<div>
 		<input type="hidden" th:field="*{id}" />
 		<button type="submit">削除</button>
