--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
 	<li>UserDetailsクラス（getAuthorities）の対応</li>
 	<li>Configクラスの権限設定例（ユーザ登録・編集）</li>
 	<li>テンプレートの権限設定例（削除フォーム）</li>
-	<li>テンプレートへのログイン情報出力例（ログインIDを出力）</li>
+	<li>テンプレートへのログイン情報出力例（usernameを出力）</li>
 	<li>insert into local_user</li>
 </ol>
 <h2>4. Loginのカスタマイズ</h2>
