--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
 	<li>テンプレートへのログイン情報出力例（displayNameを出力）</li>
 	<li>insert into local_user</li>
 </ol>
-<h2>5. ROLE・ログイン情報の使用</h2>
+<h2>5. Role・ログイン情報の使用</h2>
 <div>
 	<a href="https://github.com/no29571/user/tree/ex-role">GitHub：ex-role</a>
 </div>
@@ -44,7 +44,7 @@
 	<li>テンプレートへのログイン情報出力例（usernameを出力）</li>
 	<li>insert into local_user</li>
 </ol>
-<h2>4. Loginのカスタマイズ</h2>
+<h2>4. ログインのカスタマイズ</h2>
 <div>
 	<a href="https://github.com/no29571/user/tree/ex-login">GitHub：ex-login</a>
 </div>
