Loginのカスタマイズ

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 	<li><a th:href="@{/logout}">ログアウト</a></li>
 	<li><a th:href="@{/listUser}">ユーザ一覧</a></li>
 </ul>
-<h2>4. Loginのカスタマイズ</h2>
+<h2>4. ログインのカスタマイズ</h2>
 <div>
 	<a href="https://github.com/no29571/user/tree/ex-login">GitHub：ex-login</a>
 </div>
