--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -16,6 +16,10 @@
 <!--編集フォーム-->
 <form th:action="@{/editUser}" th:object="${localUserForm}" method="post">
 	<div>
+		<input type="hidden" th:field="*{ver}" />
+		<span th:if="${#fields.hasErrors('ver')}" th:errors="*{ver}"></span>
+	</div>
+	<div>
 		<label for="name">name</label>
 		<input type="text" th:field="*{name}" id="name" />
 		<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
