--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -30,20 +30,13 @@
 		<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
 	</div>
 	<div>
-		<label for="role">role</label>
-		<select th:field="*{role}" id="role">
-			<option th:each="item : *{roleList}" th:value="${item.name}" th:text="${item.displayName}"></option>
-		</select>
-		<span th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></span>
-	</div>
-	<div>
 		<input type="hidden" th:field="*{password}" />
 		<input type="hidden" th:field="*{id}" />
 		<button type="submit">登録</button>
 	</div>
 </form>
-<!--削除フォーム-->
-<form sec:authorize="${hasRole('ROLE_ADMIN')}"
+<!--削除フォーム--><!--sec:authorize="${hasRole('ROLE_ADMIN')}"-->
+<form 
 	th:action="@{/deleteUser}" th:object="${localUserForm}" method="post">
 	<div>
 		<input type="hidden" th:field="*{id}" />
