--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja"
 	xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet" >
+<script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
 <link th:href="@{/css/site.css}" rel="stylesheet" />
 <title>edit | sample</title>
 </head>
 <body>
-<div>
-	<a th:href="@{/listUser}">一覧に戻る</a>
-</div>
+<header th:replace="nav"></header>
+<div class="container">
 <h1>edit</h1>
 <!--編集フォーム-->
 <form th:action="@{/editUser}" th:object="${localUserForm}" method="post">
@@ -30,18 +31,23 @@
 		<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
 	</div>
 	<div>
+		<label for="enabled">enabled</label>
+		<input type="checkbox" th:field="*{enabled}" id="enabled" />
+		<span th:if="${#fields.hasErrors('enabled')}" th:errors="*{enabled}"></span>
+	</div>
+	<div>
 		<input type="hidden" th:field="*{password}" />
 		<input type="hidden" th:field="*{id}" />
 		<button type="submit">登録</button>
 	</div>
 </form>
-<!--削除フォーム--><!--sec:authorize="${hasRole('ROLE_ADMIN')}"-->
-<form 
-	th:action="@{/deleteUser}" th:object="${localUserForm}" method="post">
+<!--削除フォーム
+<form th:action="@{/deleteUser}" th:object="${localUserForm}" method="post">
 	<div>
 		<input type="hidden" th:field="*{id}" />
 		<button type="submit">削除</button>
 	</div>
-</form>
+</form>-->
+</div>
 </body>
 </html>
