--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,7 @@
 <ol>
 	<li>pom.xmlにorg.webjarsを追加</li>
 	<li>【起動エラーが出る場合】実行 - Marven clean</li>
+	<li>【起動エラーが出る場合】プロジェクト - Marven プロジェクトの更新</li>
 	<li>ナビゲーションのテンプレートを作成</li>
 	<li>他のテンプレートの上記対応</li>
 	<li>【ログイン画面やエラー画面にもbootstrap等をリンクする場合】securityFilterChainでwebjarsを許可</li>
