--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,7 +11,9 @@
 <title>error | sample</title>
 </head>
 <body>
-<header th:replace="nav"></header>
+<div>
+	<a th:href="@{/}">HOME</a>
+</div>
 <div class="container">
 <h1 th:text="${message}"></h1>
 <div th:text="'timestamp: ' + ${timestamp}"></div>
