--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -14,6 +14,12 @@
 					<a class="nav-link text-dark" th:href="@{/listUser}">ユーザ一覧</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link text-dark" th:href="@{/listRole}">ロール一覧</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link text-dark" th:href="@{/listUserRole}">ロール付与一覧</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link text-dark" th:href="@{/changePassword}">パスワード変更</a>
 				</li>
 				<li class="nav-item">
