--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -30,6 +30,7 @@
 			<th>name</th>
 			<th>email</th>
 			<!--<th>password</th>-->
+			<th>enabled</th>
 			<th>ver</th>
 			<th>createdBy</th>
 			<th>createdDate</th>
@@ -44,13 +45,14 @@
 			<td th:text="${user.name}"></td>
 			<td th:text="${user.email}"></td>
 			<!--<td th:text="${user.password}"></td>-->
+			<td th:text="${user.enabled}"></td>
 			<td th:text="${user.ver}"></td>
 			<td th:text="${user.createdBy}"></td>
 			<td th:text="${#temporals.format(user.createdDate,'yyyy/MM/dd HH:mm')}"></td>
 			<td th:text="${user.modifiedBy}"></td>
 			<td th:text="${#temporals.format(user.modifiedDate,'yyyy/MM/dd HH:mm')}"></td>
 			<td>
-				<a th:href="@{/editUser/{id}(id=${user.id})}">編集・削除</a>
+				<a th:href="@{/editUser/{id}(id=${user.id})}">編集</a>
 			</td>
 		</tr>
 	</tbody>
