--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja"
 	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet" >
+<script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
 <link th:href="@{/css/site.css}" rel="stylesheet" />
 <title>error | sample</title>
 </head>
@@ -11,6 +15,7 @@
 <div>
 	<a th:href="@{/}">HOME</a>
 </div>
+<div class="container">
 <h1 th:text="${message}"></h1>
 <div th:text="'timestamp: ' + ${timestamp}"></div>
 <div th:text="'status: ' + ${status}"></div>
@@ -20,5 +25,6 @@
 <div th:text="'errors: ' + ${errors}"></div>
 <!--<div th:text="'trace: ' + ${trace}"></div>-->
 <div th:text="'path: ' + ${path}"></div>
+</div>
 </body>
 </html>
