--- a/src/main/resources/templates/passwd.html
+++ b/src/main/resources/templates/passwd.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja"
 	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet" >
+<script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
 <link th:href="@{/css/site.css}" rel="stylesheet" />
 <title>passwd | sample</title>
 </head>
 <body>
-<div>
-	<a th:href="@{/}">HOME</a>
-</div>
+<header th:replace="nav"></header>
+<div class="container">
 <h1>passwd</h1>
 <form th:action="@{/changePassword}" th:object="${passwordChangeForm}" method="post">
 	<div>
@@ -37,5 +40,6 @@
 		<span th:text="${message}"></span>
 	</div>
 </form>
+</div>
 </body>
 </html>
