--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja"
 	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet" >
+<script th:src="@{/webjars/jquery/jquery.min.js}" defer></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}" defer></script>
 <link th:href="@{/css/site.css}" rel="stylesheet" />
 <title>create | sample</title>
 </head>
 <body>
-<div>
-	<a th:href="@{/listUser}">一覧に戻る</a>
-</div>
+<header th:replace="nav"></header>
+<div class="container">
 <h1>create</h1>
 <form th:action="@{/createUser}" th:object="${localUserForm}" method="post">
 	<div>
@@ -36,8 +39,14 @@
 		<span th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></span>
 	</div>
 	<div>
+		<label for="enabled">enabled</label>
+		<input type="checkbox" th:field="*{enabled}" id="enabled" />
+		<span th:if="${#fields.hasErrors('enabled')}" th:errors="*{enabled}"></span>
+	</div>
+	<div>
 		<button type="submit">登録</button>
 	</div>
 </form>
+</div>
 </body>
 </html>
